--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter Js</title>
-    <link rel="stylesheet" href="utilities/style.css">
+    <link rel="stylesheet" href="utilities/css/style.css">
 </head>
 <body>
    
-    <script src="utilities/main.js"></script>
+    <script src="utilities/javascript/main.js"></script>
 </body>
 </html>
